WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213398
AX: web process crash in AXObjectCache::postNotification.
https://bugs.webkit.org/show_bug.cgi?id=213398
Summary
AX: web process crash in AXObjectCache::postNotification.
Andres Gonzalez
Reported
2020-06-19 12:32:43 PDT
AX: web process crash in AXObjectCache::postNotification.
Attachments
Patch
(6.31 KB, patch)
2020-06-19 12:45 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-06-19 12:45:32 PDT
Created
attachment 402308
[details]
Patch
Andres Gonzalez
Comment 2
2020-06-19 12:47:42 PDT
<
rdar://problem/64538798
>
EWS
Comment 3
2020-06-19 14:03:45 PDT
Committed
r263285
: <
https://trac.webkit.org/changeset/263285
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402308
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug